--- a/package.json
+++ b/package.json
@@ -19,15 +19,18 @@
     "@radix-ui/react-checkbox": "^1.2.3",
     "@radix-ui/react-scroll-area": "^1.2.6",
     "@radix-ui/react-slot": "^1.2.0",
+    "cheerio": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.23.0",
+    "jsdom": "^26.1.0",
     "lucide-react": "^0.503.0",
     "next": "^15.3.1",
     "node-fetch": "^3.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-resizable-panels": "^3.0.0",
+    "scrapfly-sdk": "^0.6.9",
     "tailwind-merge": "^3.2.0",
     "zod": "^3.24.3"
   },
